--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
+    "pnpm": "^9.11.0",
     "react": "^18",
     "react-dom": "^18",
     "react-top-loading-bar": "^2.3.1",
